fix#7 modifying to use another dummy